<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context="cephalopod.board.game.RulesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center_horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rules"
             android:textSize="40sp"
             android:textColor="@color/darkGrey"
             android:layout_gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/darkGrey"
             android:text="@string/rules_first_section"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/darkGrey"
             android:text="@string/rules_second_section"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/darkGrey"
             android:text="@string/rules_third_section"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/darkGrey"
             android:text="@string/rules_fourth_section"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/darkGrey"
             android:text="@string/rules_fifth_section"/>
         <Button
             android:id="@+id/rulesBack_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
             android:background="@drawable/shadow"
             android:fontFamily="@string/app_name"
             android:text="Back"
             android:layout_marginTop="20dp"
             android:textColor="@color/darkGrey"
             android:textSize="20sp"
             />
     </LinearLayout>
    </ScrollView>
</LinearLayout>
