<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/blue"
        android:orientation="vertical"
        android:paddingTop="@dimen/linear_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:orientation="horizontal"
            android:paddingTop="@dimen/inner_linear_layout">

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_save_layout_margin"
                android:layout_weight="1"
                android:text="@string/button_save_text" />

            <Button
                android:id="@+id/button_load"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_load_layout_margin"
                android:layout_weight="1"
                android:text="@string/button_load_text" />

            <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_reset_layout_margin"
                android:layout_weight="1"
                android:text="@string/new_game" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/blue"
        android:paddingLeft="20dp">

        <ImageView
            android:id="@+id/cell00"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell01"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell02"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell03"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell04"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="250dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell10"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell11"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell12"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell13"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell14"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="250dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell20"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell21"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell22"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell23"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell24"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="250dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell30"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell31"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell32"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell33"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell34"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="250dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell40"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell41"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell42"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="130dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell43"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/cell44"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="250dp"
            android:src="@drawable/empty" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/your_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Your score:"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/opponent_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Bot score:"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/your_score_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/opponent_score_points"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
